# fpotencia

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  config.h.in  index.html  params.json
src/: Bus.cpp  Bus.h  CMakeLists.txt  Circuit.cpp  Circuit.h  Circuit3.cpp  Circuit3.h  CommonFunctions.cpp  CommonFunctions.h  ExternalGrid.cpp  ExternalGrid.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  Line.cpp  Line.h  LineConstructors.cpp  LineConstructors.h  Load.cpp  Load.h  Shunt.cpp  Shunt.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  Solver_Iwamoto.cpp  Solver_Iwamoto.h  Solver_Jacobi.cpp  Solver_Jacobi.h  Solver_NRcurrent.cpp  Solver_NRcurrent.h  Solver_NRpolar.cpp  Solver_NRpolar.h  Solver_NRrect.cpp  Solver_NRrect.h  Solver_ZBusGS.cpp  Solver_ZBusGS.h  Transformer.cpp  (+10 more)
src/backup/: LineConstructors.cpp  LineConstructors.h
src/test/: gridExamples.h  main.cpp
test/: CMakeLists.txt  IwamotoSolverTest.cpp  IwamotoSolverTest.h  JacobiSolverTest.cpp  JacobiSolverTest.h  NRcurrentSolverTest.cpp  NRcurrentSolverTest.h  NRpolarSolverTest.cpp  NRpolarSolverTest.h  NRrectSolverTest.cpp  NRrectSolverTest.h  SolverTest.cpp  SolverTest.h  ZBusGSSolverTest.cpp  ZBusGSSolverTest.h
